hello-kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-kubernetes
  namespace: hello-kube
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-kubernetes
  template:
    metadata:
      labels:
        app: hello-kubernetes
    spec:
      containers:
        - name: hello-kubernetes
          image: central-quay-registry.apps.snohub.homelab.io/finance/app-dev:latest
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: finance-developer-pull-secret
