hello-kube/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: hello-kubernetes
  namespace: hello-kube
spec:
  to:
    kind: Service
    name: hello-kubernetes
  port:
    targetPort: 8080
  tls:
    termination: edge
